--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
   <body>
     <!-- barra de navegación -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-success">
+    <nav class="navbar navbar-expand-lg navbar-light bg-success mb-3">
       <a class="navbar-brand" href="#">
         <img src="assets/img/logo-white.png" class="logo " alt="" loading="lazy">
       </a>
-      <button class="navbar-toggler btn btn-outline-light navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-dark btn btn-outline-light" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -40,26 +40,18 @@
     </nav>
 
     <div class="card-deck">
-      <div class="card mx-auto" style="width: 18rem;">
-        <img src="assets/img/cupon-1.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Cras justo odio</li>
-          <li class="list-group-item">Dapibus ac facilisis in</li>
-          <li class="list-group-item">Vestibulum at eros</li>
-        </ul>
-        <div class="card-body">
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+      <div class="row">
+        <div class="card mx-auto" style="width: 18rem;">
+          <img class="card-img-top" src="assets/img/cupon-1.jpg" alt="cama plumones">
+          <div class="card-body font-weight-light">
+            <p class="card-text lead">Plumón Coral Fleece estampado en modelo y tamaño a elección</p>
+            <p class="card-subtitle text-muted">Plumones Manolino</p>
+            <i class="fas fa-map-marker-alt fa-xs text-muted my-auto"></i>
+            <p class="card-text d-inline text-muted direction">9191 Avenida Vitacura, Chile</p>
+          </div>
         </div>
       </div>
-
     </div>
-
-
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
