--- a/index.html
+++ b/index.html
@@ -127,11 +127,19 @@
             <input type="email" class="form-control font-weight-light" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Nombre">
           </div>
           <div class="form-group">
-            <input type="password" class="form-control font-weight-light" id="exampleInputPassword1" placeholder="Correo electrónico">
+            <input type="password" class="form-control font-weight-light" id="exampleInputPassword1" placeholder="Correo Electrónico">
           </div>
           <button type="submit" class="btn btn-light d-block mx-auto px-2">Enviar</button>
         </form>
     </div>
+
+    <footer>
+      <div class="container-fluid text-center mt-4">
+        <img src="assets/img/logo-black.png" class="logo" alt="logo cuppon">
+        <p class="text-muted font-weight-light mt-2">© 2018 Cuppon Latam .Todos los derechos reservados.</p>
+      </div>
+
+    </footer>
 
 
 
