final con version pc incluida

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Inicio<a>
+            <a class="nav-link text-light" href="#">Inicio<a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Categorías</a>
+            <a class="nav-link text-light" href="#">Categorías</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Destacados</a>
+            <a class="nav-link text-light" href="#">Destacados</a>
           </li>
         </ul>
       </div>
@@ -41,95 +41,119 @@
 
 <!-- cards -->
     <div class="card-deck">
-      <div class="row">
-        <div class="card mx-auto mb-4" style="width: 18rem;">
-          <img class="card-img-top" src="assets/img/cupon-1.jpg" alt="cama plumones">
-          <div class="card-body font-weight-light">
-            <p class="card-text lead">Plumón Coral Fleece estampado en modelo y tamaño a elección</p>
-            <p class="card-subtitle text-muted">Plumones Manolino</p>
-            <i class="fas fa-map-marker-alt fa-xs text-muted my-auto"></i>
-            <p class="card-text d-inline text-muted direction pb-2 mb-2">9191 Avenida Vitacura, Chile</p>
-            <div class="container pl-5 pt-3 mt-2 border-top">
-              <p class="d-inline pl-4 ml-2 text-muted">$45.990</p>
-              <p class="d-inline ml-3 text-success h5">$22.990</p>
+      <!--primera fila de cupones-->
+      <div class="row mx-auto">
+        <!--primer cupon-->
+        <div class="col-md-4">
+          <div class="card mb-4 px-auto" style="width: 18rem;">
+            <img class="card-img-top" src="assets/img/cupon-1.jpg" alt="cama plumones">
+            <div class="card-body font-weight-light">
+              <p class="card-text lead">Plumón Coral Fleece estampado en modelo y tamaño a elección</p>
+              <p class="card-subtitle text-muted">Plumones Manolino</p>
+              <i class="fas fa-map-marker-alt fa-xs text-muted my-auto"></i>
+              <p class="card-text d-inline text-muted direction pb-2 mb-2">9191 Avenida Vitacura, Chile</p>
+              <div class="container pl-5 pt-3 mt-2 border-top">
+                <p class="d-inline pl-4 ml-2 text-muted">$45.990</p>
+                <p class="d-inline ml-3 text-success h5">$22.990</p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="card mx-auto mb-4" style="width: 18rem;">
-          <img class="card-img-top" src="assets/img/cupon-2.jpg" alt="cama plumones">
-          <div class="card-body font-weight-light">
-            <p class="card-text lead">Entrada para compartir + platos de fondo + postres + bebestibles</p>
-            <p class="card-subtitle text-muted">V for Vegan</p>
-            <i class="fas fa-map-marker-alt fa-xs text-muted my-auto"></i>
-            <p class="card-text d-inline text-muted direction pb-2 mb-2">777 Jesse Pinkman, Chile</p>
-            <div class="container pl-5 pt-3 mt-2 border-top">
-              <p class="d-inline pl-4 ml-2 text-muted">$30.990</p>
-              <p class="d-inline pl-3 text-success h5">$12.990</p>
+        <!--segundo cupon-->
+        <div class="col-md-4">
+          <div class="card mb-4 px-auto" style="width: 18rem;">
+            <img class="card-img-top" src="assets/img/cupon-2.jpg" alt="cama plumones">
+            <div class="card-body font-weight-light">
+              <p class="card-text lead">Entrada para compartir + platos de fondo + postres + bebestibles</p>
+              <p class="card-subtitle text-muted">V for Vegan</p>
+              <i class="fas fa-map-marker-alt fa-xs text-muted my-auto"></i>
+              <p class="card-text d-inline text-muted direction pb-2 mb-2">777 Jesse Pinkman, Chile</p>
+              <div class="container pl-5 pt-3 mt-2 border-top">
+                <p class="d-inline pl-4 ml-2 text-muted">$30.990</p>
+                <p class="d-inline pl-3 text-success h5">$12.990</p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="card mx-auto mb-4" style="width: 18rem;">
-          <img class="card-img-top" src="assets/img/cupon-3.jpg" alt="cama plumones">
-          <div class="card-body font-weight-light">
-            <p class="card-text lead">Evaluación integral + blanqueamiento dental led + limpieza + fluoración</p>
-            <p class="card-subtitle text-muted">Clínica Dental Quijada</p>
-            <i class="fas fa-map-marker-alt fa-xs text-muted my-auto"></i>
-            <p class="card-text d-inline text-muted direction pb-2 mb-2">1342, Blanco Encalada, Chile</p>
-            <div class="container pl-5 pt-3 mt-2 border-top">
-              <p class="d-inline pl-3 ml-1 text-muted">$300.000</p>
-              <p class="d-inline pl-1 ml-2 text-success h5">$25.990</p>
+        <!--tercer cupon-->
+        <div class="col-md-4">
+          <div class="card mb-4 px-auto" style="width: 18rem;">
+            <img class="card-img-top" src="assets/img/cupon-3.jpg" alt="cama plumones">
+            <div class="card-body font-weight-light">
+              <p class="card-text lead">Evaluación integral + blanqueamiento dental led + limpieza + fluoración</p>
+              <p class="card-subtitle text-muted">Clínica Dental Quijada</p>
+              <i class="fas fa-map-marker-alt fa-xs text-muted my-auto"></i>
+              <p class="card-text d-inline text-muted direction pb-2 mb-2">1342, Blanco Encalada, Chile</p>
+              <div class="container pl-5 pt-3 mt-2 border-top">
+                <p class="d-inline pl-3 ml-1 text-muted">$300.000</p>
+                <p class="d-inline pl-1 ml-2 text-success h5">$25.990</p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="card mx-auto mb-4" style="width: 18rem;">
-          <img class="card-img-top" src="assets/img/cupon-4.jpg" alt="cama plumones">
-          <div class="card-body font-weight-light">
-            <p class="card-text lead">Colación para 2 personas + postre (no incluye bebidas)</p>
-            <p class="card-subtitle text-muted">Suricata almacen</p>
-            <i class="fas fa-map-marker-alt fa-xs text-muted my-auto"></i>
-            <p class="card-text d-inline text-muted direction pb-2 mb-2">1071 Miguel Claro, Chile</p>
-            <div class="container pl-5 pt-3 mt-2 border-top">
-              <p class="d-inline pl-3 ml-5 text-muted">$4.200</p>
-              <p class="d-inline pl-1 text-success h5">$2.100</p>
+      </div>
+        <!--2da fila-->
+      <div class="row mx-auto">
+        <!--primer cupon-->
+        <div class="col-md-4">
+          <div class="card mb-4 px-auto" style="width: 18rem;">
+            <img class="card-img-top" src="assets/img/cupon-4.jpg" alt="cama plumones">
+            <div class="card-body font-weight-light">
+              <p class="card-text lead">Colación para 2 personas + postre (no incluye bebidas)</p>
+              <p class="card-subtitle text-muted">Suricata almacen</p>
+              <i class="fas fa-map-marker-alt fa-xs text-muted my-auto"></i>
+              <p class="card-text d-inline text-muted direction pb-2 mb-2">1071 Miguel Claro, Chile</p>
+              <div class="container pl-5 pt-3 mt-2 border-top">
+                <p class="d-inline pl-3 ml-5 text-muted">$4.200</p>
+                <p class="d-inline pl-1 text-success h5">$2.100</p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="card mx-auto mb-4" style="width: 18rem;">
-          <img class="card-img-top" src="assets/img/cupon-5.jpg" alt="cama plumones">
-          <div class="card-body font-weight-light">
-            <p class="card-text lead">1, 2 o 4 tickets para Stukids. Elige sucursal</p>
-            <p class="card-subtitle text-muted">Stukids Centro de Eventos</p>
-            <i class="fas fa-map-marker-alt fa-xs text-muted my-auto"></i>
-            <p class="card-text d-inline text-muted direction pb-2">133 El tranque, Chile</p>
-            <div class="container pl-5 pt-3 mt-2 border-top">
-              <p class="d-inline pl-4 ml-4 text-muted">$4.000</p>
-              <p class="d-inline pl-1 ml-3 text-success h5">$2.500</p>
+        <!--2do cupon-->
+        <div class="col-md-4">
+          <div class="card mb-4 px-auto" style="width: 18rem;">
+            <img class="card-img-top" src="assets/img/cupon-5.jpg" alt="cama plumones">
+            <div class="card-body font-weight-light">
+              <p class="card-text lead">1, 2 o 4 tickets para Stukids. Elige sucursal</p>
+              <p class="card-subtitle text-muted">Stukids Centro de Eventos</p>
+              <i class="fas fa-map-marker-alt fa-xs text-muted my-auto"></i>
+              <p class="card-text d-inline text-muted direction pb-2">133 El tranque, Chile</p>
+              <div class="container pl-5 pt-3 mt-2 border-top">
+                <p class="d-inline pl-4 ml-4 text-muted">$4.000</p>
+                <p class="d-inline pl-1 ml-3 text-success h5">$2.500</p>
+              </div>
             </div>
           </div>
         </div>
-        <div class="card mx-auto mb-4" style="width: 18rem;">
-          <img class="card-img-top" src="assets/img/cupon-6.jpg" alt="cama plumones">
-          <div class="card-body font-weight-light">
-            <p class="card-text lead">San Pedro de Atacama : 1 o 2 noches en alojamiento a elección</p>
-            <p class="card-subtitle text-muted">D-Latam Travel</p>
-            <div class="container pl-5 pt-3 mt-2 border-top">
-              <p class="d-inline pl-4 ml-3 text-muted">$80.200</p>
-              <p class="d-inline pl-1 ml-1 text-success h5">$44.100</p>
+        <!--3er cupon-->
+        <div class="col-md-4">
+          <div class="card mb-4 px-auto" style="width: 18rem;">
+            <img class="card-img-top" src="assets/img/cupon-6.jpg" alt="cama plumones">
+            <div class="card-body font-weight-light">
+              <p class="card-text lead">San Pedro de Atacama : 1 o 2 noches en alojamiento a elección</p>
+              <p class="card-subtitle text-muted">D-Latam Travel</p>
+              <div class="container pl-5 pt-3 mt-2 border-top">
+                <p class="d-inline pl-4 ml-3 text-muted">$80.200</p>
+                <p class="d-inline pl-1 ml-1 text-success h5">$44.100</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <!--form-->
     <div class="card text-white bg-success mb-3 container-fluid p-4 rounded-0">
         <h5 class="font-weight-medium text-center mb-4">Recibe cupones en tu correo</h5>
         <form>
           <div class="form-group">
-            <input type="email" class="form-control font-weight-light" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Nombre">
+            <input type="email" class="form-control font-weight-light col-md-4 mx-auto" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Nombre">
           </div>
           <div class="form-group">
-            <input type="password" class="form-control font-weight-light" id="exampleInputPassword1" placeholder="Correo Electrónico">
+            <input type="password" class="form-control font-weight-light col-md-4 mx-auto" id="exampleInputPassword1" placeholder="Correo Electrónico">
           </div>
-          <button type="submit" class="btn btn-light d-block mx-auto px-2">Enviar</button>
+          <button type="submit" class="btn btn-light d-block mx-auto px-3">Enviar</button>
         </form>
     </div>
 
