--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="row mx-auto">
         <!--primer cupon-->
         <div class="col-md-4">
-          <div class="card mb-4 px-auto" style="width: 18rem;">
+          <div class="card mb-4 px-auto mx-auto" style="width: 18rem;">
             <img class="card-img-top" src="assets/img/cupon-1.jpg" alt="cama plumones">
             <div class="card-body font-weight-light">
               <p class="card-text lead">Plumón Coral Fleece estampado en modelo y tamaño a elección</p>
@@ -61,7 +61,7 @@
         </div>
         <!--segundo cupon-->
         <div class="col-md-4">
-          <div class="card mb-4 px-auto" style="width: 18rem;">
+          <div class="card mb-4 px-auto mx-auto" style="width: 18rem;">
             <img class="card-img-top" src="assets/img/cupon-2.jpg" alt="cama plumones">
             <div class="card-body font-weight-light">
               <p class="card-text lead">Entrada para compartir + platos de fondo + postres + bebestibles</p>
@@ -77,7 +77,7 @@
         </div>
         <!--tercer cupon-->
         <div class="col-md-4">
-          <div class="card mb-4 px-auto" style="width: 18rem;">
+          <div class="card mb-4 px-auto mx-auto" style="width: 18rem;">
             <img class="card-img-top" src="assets/img/cupon-3.jpg" alt="cama plumones">
             <div class="card-body font-weight-light">
               <p class="card-text lead">Evaluación integral + blanqueamiento dental led + limpieza + fluoración</p>
@@ -96,7 +96,7 @@
       <div class="row mx-auto">
         <!--primer cupon-->
         <div class="col-md-4">
-          <div class="card mb-4 px-auto" style="width: 18rem;">
+          <div class="card mb-4 px-auto mx-auto" style="width: 18rem;">
             <img class="card-img-top" src="assets/img/cupon-4.jpg" alt="cama plumones">
             <div class="card-body font-weight-light">
               <p class="card-text lead">Colación para 2 personas + postre (no incluye bebidas)</p>
@@ -112,7 +112,7 @@
         </div>
         <!--2do cupon-->
         <div class="col-md-4">
-          <div class="card mb-4 px-auto" style="width: 18rem;">
+          <div class="card mb-4 px-auto mx-auto" style="width: 18rem;">
             <img class="card-img-top" src="assets/img/cupon-5.jpg" alt="cama plumones">
             <div class="card-body font-weight-light">
               <p class="card-text lead">1, 2 o 4 tickets para Stukids. Elige sucursal</p>
@@ -128,7 +128,7 @@
         </div>
         <!--3er cupon-->
         <div class="col-md-4">
-          <div class="card mb-4 px-auto" style="width: 18rem;">
+          <div class="card mb-4 px-auto mx-auto" style="width: 18rem;">
             <img class="card-img-top" src="assets/img/cupon-6.jpg" alt="cama plumones">
             <div class="card-body font-weight-light">
               <p class="card-text lead">San Pedro de Atacama : 1 o 2 noches en alojamiento a elección</p>
